# xous-core

./: Cargo.toml  buildpush.ps1
.github/workflows/: build.yml  rust.yml
apps/: manifest.json
apps/irc/: Cargo.toml
apps/irc/hiirc/: Cargo.toml
apps/irc/loirc/: Cargo.toml
apps/irc/loirc/src/: connection.rs  lib.rs
apps/irc/src/: cmds.rs  irc.rs  main.rs  repl.rs
